projects/hello-pa/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-pa-ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - hello-pa.k8s.dewep.net
      secretName: hello-pa-ingress-certs
  rules:
    - host: hello-pa.k8s.dewep.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-pa
                port:
                  number: 80
